--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				minWidth: 200.0,
 				scale: 1.0,
 				scaleMobile: 1.0,
-				color: 0x694f5d,
-				color2: 0x68a691,
-				backgroundColor: 0x0c090d,
+				color: 0x4c6944,
+				color2: 0x368fb6,
+				backgroundColor: 0x111111,
 				size: 2.0,
 				sphereRotation: -0.002,
 				meshRotation: 0.004,
