--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website" />
 
-    <!-- ===== ADDED: Apps Script /exec endpoint (read by DeploymentView auto-resolver) ===== -->
+    <!-- Apps Script /exec for DeploymentView auto-resolver -->
     <meta
       name="apps-script-exec"
       content="https://script.google.com/macros/s/AKfycbzDhKyzdKylfdCKV5n--av0_AmkqDgVeNBPtUoLWQFic7E3YiVBnaZDNope_7B3hkem/exec"
     />
 
-    <!-- ===== ADDED: Data sources (CSV) ===== -->
+    <!-- Data sources (CSV) -->
     <meta
       name="defaults-csv"
       content="https://docs.google.com/spreadsheets/d/e/2PACX-1vRq9fpYoWY_heQNfXegQ52zvOIGk-FCMML3kw2cX3M3s8blNRSH6XSRUdtTo7UXaJDDkg4bGQcl3jRP/pub?gid=107253735&single=true&output=csv"
@@ -26,7 +26,7 @@
       content="https://docs.google.com/spreadsheets/d/e/2PACX-1vRq9fpYoWY_heQNfXegQ52zvOIGk-FCMML3kw2cX3M3s8blNRSH6XSRUdtTo7UXaJDDkg4bGQcl3jRP/pub?gid=1115158828&single=true&output=csv"
     />
 
-    <!-- ===== ADDED: Safe globals + persistence (no impact on existing code) ===== -->
+    <!-- Safe globals (NO write to 'execUrl'; use namespaced key) -->
     <script>
       (function () {
         const exec =
@@ -38,15 +38,15 @@
         const attendanceCsv =
           "https://docs.google.com/spreadsheets/d/e/2PACX-1vRq9fpYoWY_heQNfXegQ52zvOIGk-FCMML3kw2cX3M3s8blNRSH6XSRUdtTo7UXaJDDkg4bGQcl3jRP/pub?gid=1115158828&single=true&output=csv";
 
-        // Globals (readable from any view/component)
+        // Expose as globals
         window.APP_EXEC_URL = exec;
         window.DEFAULTS_CSV_URL = defaultsCsv;
         window.MEMBERS_MASTER_CSV = membersCsv;
         window.ATTENDANCE_CSV = attendanceCsv;
 
-        // Persist exec for components that look in storage
+        // Persist under a *namespaced* key so we don't collide with your auth system
         try {
-          localStorage.setItem("execUrl", exec);
+          localStorage.setItem("deploymentExecUrl", exec);
         } catch (e) {}
       })();
     </script>
