--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body style="margin: 0px">
     <div id="app"></div>
 
-    <!-- ✅ Deployment-only globals (namespaced; read-only; safe for auth) -->
+    <!-- ✅ Deployment-only globals (namespaced; point to Netlify proxy to avoid CORS) -->
     <script>
-      window.DEPLOYMENT_EXEC_URL =
-        "https://script.google.com/macros/s/AKfycbzDhKyzdKylfdCKV5n--av0_AmkqDgVeNBPtUoLWQFic7E3YiVBnaZDNope_7B3hkem/exec";
+      // Use your Netlify function (proxy) instead of script.google.com
+      window.DEPLOYMENT_EXEC_URL = "/.netlify/functions/gas";
 
+      // Optional CSV globals
       window.DEFAULTS_CSV_URL =
         "https://docs.google.com/spreadsheets/d/e/2PACX-1vRq9fpYoWY_heQNfXegQ52zvOIGk-FCMML3kw2cX3M3s8blNRSH6XSRUdtTo7UXaJDDkg4bGQcl3jRP/pub?gid=107253735&single=true&output=csv";
       window.MEMBERS_MASTER_CSV =
@@ -23,9 +24,10 @@
         "https://docs.google.com/spreadsheets/d/e/2PACX-1vRq9fpYoWY_heQNfXegQ52zvOIGk-FCMML3kw2cX3M3s8blNRSH6XSRUdtTo7UXaJDDkg4bGQcl3jRP/pub?gid=1115158828&single=true&output=csv";
     </script>
 
-    <!-- Your app boot (unchanged order) -->
+    <!-- Your app -->
     <script type="module" src="/src/main.js"></script>
 
+    <!-- three.js + vanta (unchanged) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script type="module" src="/src/assets/scripts/vanta.globe.min.js"></script>
 
